--- a/learning/learning.vcxproj
+++ b/learning/learning.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleRenderer.cpp" />
     <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="RenderObject.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshSource.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleRenderer.h" />
     <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="RenderObject.h" />
