--- a/learning/learning.vcxproj
+++ b/learning/learning.vcxproj
@@ -178,7 +178,10 @@
   <ItemGroup>
     <None Include="shader\LearningVShader.glsl" />
     <None Include="shader\BasicColorFShader.glsl" />
-    <None Include="shader\ParticleVShader.glsl" />
+    <None Include="shader\ParticleBaseFShader.glsl" />
+    <None Include="shader\ParticleBaseVShader.glsl" />
+    <None Include="shader\TriangleFShader.glsl" />
+    <None Include="shader\TriangleVShader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
