--- a/learning/learning.vcxproj
+++ b/learning/learning.vcxproj
@@ -187,6 +187,8 @@
     <None Include="shader\objectVShader.glsl" />
     <None Include="shader\ParticleBaseFShader.glsl" />
     <None Include="shader\ParticleBaseVShader.glsl" />
+    <None Include="shader\SkyBoxFShader.glsl" />
+    <None Include="shader\SkyBoxVShader.glsl" />
     <None Include="shader\TriangleFShader.glsl" />
     <None Include="shader\TriangleVShader.glsl" />
   </ItemGroup>
