--- a/learning/learning.vcxproj.filters
+++ b/learning/learning.vcxproj.filters
@@ -50,9 +50,6 @@
     <ClCompile Include="ParticleSystem\ParticleMaster.cpp">
       <Filter>ParticleSystem</Filter>
     </ClCompile>
-    <ClCompile Include="ParticleSystem\ParticleSystemBase.cpp">
-      <Filter>ParticleSystem</Filter>
-    </ClCompile>
     <ClCompile Include="Perlin.cpp">
       <Filter>Others</Filter>
     </ClCompile>
@@ -64,6 +61,9 @@
     </ClCompile>
     <ClCompile Include="RenderObjectManager.cpp">
       <Filter>Core</Filter>
+    </ClCompile>
+    <ClCompile Include="ParticleSystem\ParticleSystem.cpp">
+      <Filter>ParticleSystem</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -94,9 +94,6 @@
     <ClInclude Include="ParticleSystem\ParticleMaster.h">
       <Filter>ParticleSystem</Filter>
     </ClInclude>
-    <ClInclude Include="ParticleSystem\ParticleSystemBase.h">
-      <Filter>ParticleSystem</Filter>
-    </ClInclude>
     <ClInclude Include="Perlin.h">
       <Filter>Others</Filter>
     </ClInclude>
@@ -108,6 +105,9 @@
     </ClInclude>
     <ClInclude Include="RenderObjectManager.h">
       <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleSystem\ParticleSystem.h">
+      <Filter>ParticleSystem</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
