--- a/learning/learning.vcxproj
+++ b/learning/learning.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="RenderObjectManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Trajectory.cpp" />
     <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -176,6 +177,7 @@
     <ClInclude Include="RenderObjectManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Trajectory.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
