Extended Gooch shading model implemented (RTR 4rd, 5.3)

--- a/learning/learning.vcxproj
+++ b/learning/learning.vcxproj
@@ -144,6 +144,8 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="HeightMap.cpp" />
+    <ClCompile Include="Lightings\Light.cpp" />
+    <ClCompile Include="Lightings\PointLight.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ParticleSystem\Particle.cpp" />
@@ -167,6 +169,8 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="HeightMap.h" />
     <ClInclude Include="learningNotes.h" />
+    <ClInclude Include="Lightings\Light.h" />
+    <ClInclude Include="Lightings\PointLight.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="ParticleSystem\Particle.h" />
     <ClInclude Include="ParticleSystem\ParticleMaster.h" />
