--- a/learning/learning.vcxproj
+++ b/learning/learning.vcxproj
@@ -193,6 +193,8 @@
     <None Include="shader\objectVShader.glsl" />
     <None Include="shader\ParticleBaseFShader.glsl" />
     <None Include="shader\ParticleBaseVShader.glsl" />
+    <None Include="shader\PhongShadingFS.glsl" />
+    <None Include="shader\PhongShadingVS.glsl" />
     <None Include="shader\SkyBoxFShader.glsl" />
     <None Include="shader\SkyBoxVShader.glsl" />
     <None Include="shader\TriangleFShader.glsl" />
