--- a/basic/basic.vcxproj.filters
+++ b/basic/basic.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="RenderBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="math\Math.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="math\Matrix4.cpp">
