Haven't updated for a while......

--- a/basic/basic.vcxproj
+++ b/basic/basic.vcxproj
@@ -155,6 +155,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="3rdParty\stb_image.h" />
+    <ClInclude Include="3rdParty\stb_image_write.h" />
     <ClInclude Include="GameTimer.h" />
     <ClInclude Include="InputDevice.h" />
     <ClInclude Include="Keyboard.h" />
